[gd_scene load_steps=12 format=2]

[ext_resource path="res://interfaces/dialogue/Dialogue.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/Custom Fonts/PoetsenOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Assets/UI/Dialog/Portraits/MC_Talksprite_0.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/Dialog/Portraits/MC_Talksprite_1.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/Dialog/Portraits/MC_Talksprite_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/Dialog/Portraits/MC_Talksprite_Question.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/Dialog/arrow.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 0.501961 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0.717647 )
border_width_left = 20
border_width_top = 20
border_width_right = 20
border_width_bottom = 20
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
border_width_left = 30
border_width_top = 30
border_width_right = 30
border_width_bottom = 30
border_color = Color( 0, 0, 0, 1 )

[node name="Dialogue" type="Panel"]
anchor_left = 0.084
anchor_top = 0.533
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -107.52
margin_top = -383.76
margin_right = -1280.0
margin_bottom = -720.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueBox" type="Panel" parent="."]
margin_left = -658.0
margin_top = 148.0
margin_right = 1140.0
margin_bottom = 635.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="DialogueBox"]
margin_left = 40.0
margin_top = 40.0
margin_right = 1654.0
margin_bottom = 441.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "<No text defined>"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextArrow" type="TextureRect" parent="DialogueBox"]
margin_left = 1667.17
margin_top = 352.049
margin_right = 1748.17
margin_bottom = 437.049
texture = ExtResource( 7 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitBox" type="Panel" parent="."]
margin_left = -1181.0
margin_top = 108.0
margin_right = -635.0
margin_bottom = 644.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitNeutral" type="TextureRect" parent="PortraitBox"]
margin_left = -51.5846
margin_top = -355.433
margin_right = 534.415
margin_bottom = 506.567
texture = ExtResource( 3 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitSmile" type="TextureRect" parent="PortraitBox"]
margin_left = -51.5846
margin_top = -355.433
margin_right = 534.415
margin_bottom = 506.567
texture = ExtResource( 4 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitGrin" type="TextureRect" parent="PortraitBox"]
margin_left = -51.5846
margin_top = -355.433
margin_right = 534.415
margin_bottom = 506.567
texture = ExtResource( 5 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitQuestion" type="TextureRect" parent="PortraitBox"]
margin_left = -51.5846
margin_top = -355.433
margin_right = 534.415
margin_bottom = 506.567
texture = ExtResource( 6 )
expand = true
stretch_mode = 3
__meta__ = {
"_edit_use_anchors_": false
}
